# Conveyor

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  StaticOperatorType.hpp  main.cpp
benchmark/bench_extend/: BenchmarkingExtend.hpp  TemplateFunctionBenchmark.cpp  TemplateFunctionBenchmark.hpp
include/Conveyor/: Belt.hpp  FuncOperator.hpp  Operator.hpp  StaticBelt.hpp  StaticMultiplexBelt.hpp
src/Conveyor/: Belt.cpp  FuncOperator.cpp
tests/: CMakeLists.txt  MultiplexConveyor.cpp  RealTimeConveyor.cpp  StaticConveyor.cpp  StaticCopiesCount.cpp  TestingExtend.hpp
